<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/t_tulo_de_la_tarea"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFechaCreacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFechaCreacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/fecha_de_creaci_n_de_la_tarea"
                android:onClick="showDatePickerDialog" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFechaObjetivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFechaCreacion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFechaObjetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_objetivo_de_la_tarea"
                android:focusable="false"
                android:onClick="showDatePickerDialog" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxPrioritaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioritaria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFechaObjetivo" />

        <!-- Botón Siguiente -->
        <Spinner
            android:id="@+id/spinnerProgreso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/progreso_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPrioritaria" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerProgreso"
            app:layout_constraintVertical_bias="0.133" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

